// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typescript/ternary/stroustrup > nested ternary operator 1`] = `
"const x = condition1
  ? condition2
    ? function foo() {}
    : function bar() {
        return 0;
      }
  : condition3
    ? function baz() {}
    : function qux() {
        return 0;
      };
"
`;

exports[`typescript/ternary/stroustrup > ternary operator 1`] = `
"const x = condition
  ? function foo() {}
  : function bar() {
      return 0;
    };
"
`;
